Skills paged styled

--- a/src/containers/Nav/Nav.scss
+++ b/src/containers/Nav/Nav.scss
@@ -1,5 +1,7 @@
+@use "../../styles/variables" as *;
 
 .title {
-    color: #85cdfa;
+    font-family: $font-primary;
+    color: $purple;
     margin: auto;
 }
