--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&family=Kanit&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&family=Kanit&family=Satisfy&display=swap');
 
 $font-primary: 'Josefin Sans', sans-serif;
 $font-secondary: 'Kanit', sans-serif;
+$font-tertiary: 'Satisfy', cursive;
+
+$purple: #632ce4;
+$light-purple: #7851A9;
+$dark-purple: #561D5E;
+
+$indigo: #8D7FD4;
+
+$blue: #4169e1;
+$light-blue: #8FA1F7;
+$dark-blue: #10289E;
+
+$gold: #F5BD02;
+$light-gold: #DBCA72;
+$dark-gold: #ffbd1b;
