added about me images

--- a/src/App.scss
+++ b/src/App.scss
@@ -12,4 +12,18 @@
   text-align: center;
 }
 
+.page__heading {
+  color: $gold;
+  text-decoration-line: underline;
+  text-decoration-style: double;
+  text-decoration-color: $light-blue;
+  text-decoration-thickness: 2px;
+  font-size: 2.7rem;
+}
 
+
+.page__text {
+  font-family: $font-secondary;
+  font-size: 1.5rem;
+  
+}
