Changed the colour on svg's

--- a/src/components/Carousel/Carousel.scss
+++ b/src/components/Carousel/Carousel.scss
@@ -15,9 +15,10 @@
     }
 
     &__image {
+        background-color: $purple;
         
         &--main {
-        margin: -5rem 7rem 0 7rem
+        margin: 10rem 7rem 0 7rem;
     }
 
     &--side {
