--- a/src/pages/About/About.scss
+++ b/src/pages/About/About.scss
@@ -31,7 +31,7 @@
 }
 
 .section-a__img {
-    background-color: $light-blue;
+    background-color: $purple;
     rotate: 3deg;
     border-radius: 5px;
     z-index: -1;
@@ -53,7 +53,7 @@
 
 .about-b__img {
     rotate: 5deg;
-    border: solid $light-blue 2px;
+    border: solid $purple 2px;
     border-radius: 5px;
     padding: 40px 0px;
 }
