--- a/src/App.scss
+++ b/src/App.scss
@@ -5,11 +5,12 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  // font-family: $font-primary;
+  
 }
 
 .App {
   text-align: center;
+  background-color: #f0f0f0;
 }
 
 .page__heading {
