--- a/src/components/Carousel/Carousel.scss
+++ b/src/components/Carousel/Carousel.scss
@@ -1,8 +1,6 @@
 @use "../../styles/variables" as *;
 
 .carousel {
-
-
     &__arrow {
         font-size: 3rem;
         cursor: pointer;
@@ -24,6 +22,10 @@
         padding: 5rem 3rem;
         border-radius: 15px;
         size: 3rem;
+        
+        &:hover{
+            animation: bounce 1s ease-in-out 0s 2 normal;
+        }
     }
 
     &--side {
@@ -41,3 +43,15 @@
 
 }
 
+@keyframes bounce {
+    0% {
+        transform: translateY(0px);
+    }
+    50%{
+        transform: translateY(-50px);
+    }
+    100%{
+        transform: translateY(0px);
+    }
+    
+}
