--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,21 +1,26 @@
 @use "../../styles/variables" as *;
 
+.home {
+    box-shadow: 0px 0px 15px 10px rgba(0, 0, 0, 0.35);
+    margin: 0 auto;
+    width: 85%;
+}
+
 .typewriter{
     display: inline-block;
-    margin: 6rem auto;
+    margin: 5.7rem auto;
     border: solid black;
-    border-width: 20px 10px;
-    border-radius: 5px;
-    height: 70vh;
-    width: 75vw;
-    padding: 7rem 3rem;
+    border-width: 30px 15px;
+    border-radius: 10px;
+    width: 65vw;
+    padding: 6.7rem 0.5rem;
     background-color: #0078d7;
 }
 
 .titleContainer{
     overflow: hidden;
     border-right: .15em solid $gold;
-    font-size: 1.6rem;
+    font-size: 1.5rem;
     white-space: nowrap;
     width: 0;
     animation: typing 2.3s steps(45, end) 0.5s forwards,
@@ -39,10 +44,11 @@
     to { border-color: $gold; }
   }
 
-  @media (min-width: 1150px) {
-    .home {
-        box-shadow: 0px 0px 15px 10px rgba(0, 0, 0, 0.35);
-        margin: 0 auto;
-        width: 85%;
-    }
-  }
+//   @media (min-width: 1150px) {
+//     .home {
+//         box-shadow: 0px 0px 15px 10px rgba(0, 0, 0, 0.35);
+//         margin: 0 auto;
+//         width: 85%;
+//         height: 93vh;
+//     }
+//   }
