Contact page complete

--- a/src/App.scss
+++ b/src/App.scss
@@ -15,10 +15,10 @@
 }
 
 .page__heading {
-  color: $gold;
+  color: $purple;
   text-decoration-line: underline;
   text-decoration-style: double;
-  text-decoration-color: $light-blue;
+  text-decoration-color: $gold;
   text-decoration-thickness: 2px;
   font-size: 2.7rem;
   margin-bottom: 1rem;
