--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -4,16 +4,17 @@
     box-shadow: 0px 0px 15px 10px rgba(0, 0, 0, 0.35);
     margin: 0 auto;
     width: 85%;
+    height: 91vh;
+    
 }
 
 .typewriter{
     display: inline-block;
-    margin: 5.7rem auto;
+    margin: 5.7rem 0;
     border: solid black;
     border-width: 30px 15px;
     border-radius: 10px;
-    width: 65vw;
-    padding: 6.7rem 0.5rem;
+    padding: 6.7rem 5rem;
     background-color: #0078d7;
 }
 
