--- a/src/pages/BackEnd/BackEnd.scss
+++ b/src/pages/BackEnd/BackEnd.scss
@@ -4,5 +4,20 @@
 }
 
 .pageImg{
-    height: 450px;
+    height: auto;
+    width: 40rem;
+    border-radius: 50px;
+    margin: 1.5rem 0rem;
 }
+
+@media only screen and (max-width: 1027px) {
+    
+    
+}
+    
+@media only screen and (max-width: 600px) {
+    .pageImg{
+        width: 20rem;
+    }
+}
+
