--- a/src/App.scss
+++ b/src/App.scss
@@ -24,9 +24,13 @@
   margin-bottom: 1rem;
 }
 
-
 .page__text {
   font-family: $font-secondary;
   font-size: 1.5rem;
   
+}
+
+.card__container{
+  margin:  auto;
+  width: 85vw;
 }
