--- a/src/components/ProjectCard/ProjectCard.scss
+++ b/src/components/ProjectCard/ProjectCard.scss
@@ -11,6 +11,10 @@
     width: 35rem;
     height: auto;
     border-radius: 15px;
+
+    &:hover {
+        opacity: 0.7;
+    }
 }
 
 .card__title {
