Tab skeleton complete

--- a/src/pages/About/About.scss
+++ b/src/pages/About/About.scss
@@ -69,13 +69,13 @@
         height: auto;
     }
 
-    .section-a__img {
+    // .section-a__img {
 
-    }
+    // }
 
-    .about__img{
+    // .about__img{
 
-    }
+    // }
     
     .about__section-b {
         flex-direction: column;
@@ -87,13 +87,13 @@
         height: auto;
     }
 
-    .section-b__img{
+    // .section-b__img{
 
-    }
+    // }
 
-    .about-b__img{
+    // .about-b__img{
 
-    }
+    // }
 }
     
 @media only screen and (max-width: 600px) {
@@ -103,9 +103,9 @@
         height: auto;
     }
 
-    .section-a__img {
+    // .section-a__img {
 
-    }
+    // }
 
     .about__img{
         width: 20rem;
@@ -117,9 +117,9 @@
         height: auto;
     }
 
-    .section-b__img{
+    // .section-b__img{
 
-    }
+    // }
 
     .about-b__img{
         width: 20rem;
@@ -129,27 +129,27 @@
 
 @media only screen and (max-width: 450px) {
 
-    .about__experience {
+    // .about__experience {
 
-    }
+    // }
 
-    .section-a__img {
+    // .section-a__img {
 
-    }
+    // }
 
-    .about__img{
+    // .about__img{
 
-    }
+    // }
 
-    .about__interests{
+    // .about__interests{
 
-    }
+    // }
 
-    .section-b__img{
+    // .section-b__img{
 
-    }
+    // }
 
-    .about-b__img{
+    // .about-b__img{
 
-    }
+    // }
 }
