--- a/src/pages/SingleProject/SingleProject.scss
+++ b/src/pages/SingleProject/SingleProject.scss
@@ -46,3 +46,24 @@
 #screenshot{
     width: 40rem;
 }
+
+.card__button{
+    margin: 1rem;
+    height: 3rem;
+    width: 7rem;
+    border-radius: 10px;
+    cursor: pointer;
+    font-size: 1.3rem;
+    font-weight: 500;
+    text-align: center;
+    font-family: $font-tertiary;
+    background-color: $light-purple;
+    color: #f8f9fc;
+    border: 2px solid $light-purple;
+
+
+    &:hover {
+        background-color: #f8f9fc;
+        color: $light-purple;
+    }
+}
