--- a/src/App.scss
+++ b/src/App.scss
@@ -5,7 +5,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  
 }
 
 .App {
@@ -22,6 +21,7 @@
   text-decoration-thickness: 2px;
   font-size: 2.7rem;
   margin-bottom: 1rem;
+  font-family: $font-primary;
 }
 
 .page__text {
