--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -14,6 +14,6 @@ $blue: #4169e1;
 $light-blue: #8FA1F7;
 $dark-blue: #10289E;
 
-$gold: #F5BD02;
+$gold: #f5bd02;
 $light-gold: #DBCA72;
 $dark-gold: #ffbd1b;
